# Multimodal-GraphRAG

./: .env.example  .gitignore  README.md  docker-compose.yml  index_data.py  pyproject.toml  query_knowlage_graph.py
data/episodes_splitted/1x01 - The One Where Monica Gets A Roommate/: all_captions.json  merged_chunks_0.json  merged_chunks_1.json  merged_chunks_2.json  merged_chunks_3.json  merged_chunks_4.json
data/episodes_splitted/1x02 - The One with the Sonogram at the End/: all_captions.json  merged_chunks_0.json  merged_chunks_1.json  merged_chunks_2.json  merged_chunks_3.json  merged_chunks_4.json
data/episodes_splitted/1x03 - The One With The Thumb/: all_captions.json  merged_chunks_0.json  merged_chunks_1.json  merged_chunks_2.json  merged_chunks_3.json  merged_chunks_4.json
data/episodes_splitted/1x04 - The One with George Stephanopoulos/: all_captions.json  merged_chunks_0.json  merged_chunks_1.json  merged_chunks_2.json  merged_chunks_3.json  merged_chunks_4.json
data/episodes_splitted/1x05 - The One With The East German Laundry Detergent/: all_captions.json  merged_chunks_0.json  merged_chunks_1.json  merged_chunks_2.json  merged_chunks_3.json  merged_chunks_4.json
data/episodes_splitted/1x06 - The One with the Butt/: all_captions.json  merged_chunks_0.json  merged_chunks_1.json  merged_chunks_2.json  merged_chunks_3.json  (+1 more)
data/meta/: README.MD
docs/: Links.txt
graph/: KnowledgeGraph.py  neo4j_client.py  prompts.py  qdrant_db.py
llm/: __init__.py  factory.py
preprocessor/: __init__.py  helper.py  qwen3_vllm_inference.py  video_spilter.py
(+1209 files in other folders)
